# mta-rag-chat

./: .gitignore  README.md  compose.yaml  gtfs_data_access.py  gtfs_namespace.ipynb  mta-chat-proto.ipynb  mta_chat.py  mta_embeddings.yaml  mta_realtime.py  mta_reference.py  mta_reload_timetable.py  mta_search.py  pyproject.toml  requirements.txt  setup.sh
notebooks/: mta-chat-proto.ipynb
turbopuffer-mcp/: README.md  claude_desktop_config_example.json  pyproject.toml  turbopuffer_mcp.py
