[project]
name = "mta-rag-chat"
version = "0.1.0"
description = "RAG chat system for New York City subway information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "turbopuffer[fast]>=0.4.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "ipywidgets>=8.1.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
